src/test/resources/frontendReference/invalid/syntaxErr/function/functionMissingType.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:3 -- mismatched input '(' expecting {'[', '='}
Syntactic Error at 15:2 -- mismatched input 'int' expecting <EOF>
2 parser error(s) detected, no further compilation attempted.
